--- a/myhood/Base.lproj/Main.storyboard
+++ b/myhood/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,15 +18,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fbh-fc-XlV">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="86" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fbh-fc-XlV">
                                 <rect key="frame" x="20" y="84" width="560" height="496"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="86" id="6ge-4E-9FO" customClass="PostCell" customModule="myhood" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="86"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6ge-4E-9FO" id="xcH-Vd-xLA">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="86"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barrel-water-bridge" translatesAutoresizingMaskIntoConstraints="NO" id="HDU-WT-opt">
+                                                    <rect key="frame" x="8" y="8" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="BhX-OW-q1C"/>
+                                                        <constraint firstAttribute="width" constant="70" id="NZv-xV-6ID"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A place in my hood!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Enh-je-JXD">
+                                                    <rect key="frame" x="86" y="8" width="466" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="WPZ-sy-kmA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey blah went to the store and bought a soda. La de da the man sat down in the store." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FUa-1a-cMU">
+                                                    <rect key="frame" x="86" y="32" width="466" height="46"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="46" id="mjL-5B-MPp"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Enh-je-JXD" firstAttribute="trailing" secondItem="xcH-Vd-xLA" secondAttribute="trailingMargin" id="9zd-DJ-qGb"/>
+                                                <constraint firstItem="FUa-1a-cMU" firstAttribute="leading" secondItem="HDU-WT-opt" secondAttribute="trailing" constant="8" id="AxC-ba-akj"/>
+                                                <constraint firstItem="HDU-WT-opt" firstAttribute="bottom" secondItem="xcH-Vd-xLA" secondAttribute="bottomMargin" id="Owm-Fi-nqV"/>
+                                                <constraint firstItem="FUa-1a-cMU" firstAttribute="trailing" secondItem="xcH-Vd-xLA" secondAttribute="trailingMargin" id="TeV-To-KQt"/>
+                                                <constraint firstItem="Enh-je-JXD" firstAttribute="leading" secondItem="HDU-WT-opt" secondAttribute="trailing" constant="8" id="USZ-T0-7yX"/>
+                                                <constraint firstItem="Enh-je-JXD" firstAttribute="top" secondItem="xcH-Vd-xLA" secondAttribute="topMargin" id="dbB-Wh-yIi"/>
+                                                <constraint firstItem="FUa-1a-cMU" firstAttribute="top" secondItem="Enh-je-JXD" secondAttribute="bottom" constant="3" id="gl7-sD-9t0"/>
+                                                <constraint firstItem="HDU-WT-opt" firstAttribute="top" secondItem="xcH-Vd-xLA" secondAttribute="topMargin" id="nOF-Fu-wOU"/>
+                                                <constraint firstItem="HDU-WT-opt" firstAttribute="leading" secondItem="xcH-Vd-xLA" secondAttribute="leadingMargin" id="oPn-SM-nDb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descLbl" destination="FUa-1a-cMU" id="cty-Jk-VYP"/>
+                                            <outlet property="postImg" destination="HDU-WT-opt" id="TFl-Nt-vCY"/>
+                                            <outlet property="titleLbl" destination="Enh-je-JXD" id="Ai4-1I-Hs4"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRd-A0-PKB">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XD8-c3-LGd">
+                                        <rect key="frame" x="551" y="24" width="41" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="41" id="UH7-lZ-Cu4"/>
+                                            <constraint firstAttribute="height" constant="32" id="nvv-qB-WDs"/>
+                                        </constraints>
+                                        <state key="normal" image="camera"/>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="eaT-D8-Wfp">
+                                        <rect key="frame" x="217" y="8" width="167" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="6aB-EG-Lln"/>
+                                            <constraint firstAttribute="width" constant="167" id="8DW-eB-dDB"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" red="0.1803921568627451" green="0.52941176470588236" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="eaT-D8-Wfp" firstAttribute="centerX" secondItem="GRd-A0-PKB" secondAttribute="centerX" id="J6K-8U-Mwg"/>
                                     <constraint firstAttribute="height" constant="64" id="KhO-9A-E1I"/>
+                                    <constraint firstAttribute="trailing" secondItem="XD8-c3-LGd" secondAttribute="trailing" constant="8" id="OU9-CF-xCZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="XD8-c3-LGd" secondAttribute="bottom" constant="8" id="gfH-Yo-38p"/>
+                                    <constraint firstAttribute="bottom" secondItem="eaT-D8-Wfp" secondAttribute="bottom" constant="8" id="oix-qn-iKe"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -40,10 +115,18 @@
                             <constraint firstItem="GRd-A0-PKB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tR4-9J-uhv"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="fbh-fc-XlV" id="qNn-uc-ltP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="565" y="550"/>
+            <point key="canvasLocation" x="947" y="553"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bannerlogo" width="518" height="194"/>
+        <image name="barrel-water-bridge" width="550" height="440"/>
+        <image name="camera" width="100" height="77"/>
+    </resources>
 </document>
